logs/Slang/chapter-9/9.4.2.2--event_implicit.sv.log
name: event_implicit
description: event implicit list
should_fail: 0
tags: 9.4.2.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.2.2--event_implicit.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.4.2.2--event_implicit.sv:13:9: error: language feature not yet supported
	always @(*)
	       ^~~~
